# freelance-api

./: Dockerfile  README.md  celerybeat-schedule  docker-compose.override.yml  docker-compose.yml  edgedbtest.py  pyproject.toml  traefik.yml
alembic/: env.py
alembic/versions/: 2024_02_29_1451-ccbbd245a382_init.py
app/: config.py  main.py  models.py
app/core/: security.py
app/core/repositories/: __init__.py  sa_repo_base.py
app/core/uow/: sqlalchemy_uow.py  uow_base.py
app/database/: base.py  db.py
app/logs/: router.py  services.py
app/logs/repositories/: log_repo.py
app/modules/auth/: router.py  schemes.py  services.py
app/modules/auth/repositories/: auth_repo.py
app/modules/logs/: models.py  router.py  schemes.py  services.py
app/modules/logs/repositories/: log_repo.py
app/modules/users/: models.py  router.py  schemes.py  services.py
app/modules/users/repositories/: user_repo.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
tasks/: main.py
utils/services/: base_service.py
utils/sqlalchemy/: order.py
utils/uow/: sqlalchemy_uow.py  uow_base.py
